--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Password Visibility",
-    "description": "Toggle password visibility using context menu or keyboard shortcut",
-    "version": "2.0.0",
+    "default_locale": "en",
+    "name": "__MSG_extensionName__",
+    "description": "__MSG_extensionDescription__",
+    "version": "2.1.0",
     "applications": {
         "gecko": {
             "id": "password.visibility@sineway",
@@ -22,7 +23,7 @@
             "suggested_key": {
                 "default": "Alt+P"
             },
-            "description": "Send a 'toggle-password-visibility' event to the extension"
+            "description": "__MSG_primaryAction__"
         }
     }
 }
