--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "servor": "^4.0.2"
     },
     "scripts": {
-        "serve": "servor './' 'test.html' 3000 --browse --reload",
+        "test": "servor './' 'test.html' 3000 --browse --reload",
         "build": "zip 'build' -FS -r './' -i '_locales/*' 'icons/*' 'node_modules/webextension-polyfill/*' 'background.*' 'content.js' 'manifest.json'"
     }
 }
