--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,11 @@
 
     "name": "__MSG_name__",
     "description": "__MSG_description__",
-    "version": "3.0.0",
+
     "author": "Sineway",
+    "version": "3.0.0",
+
+    "homepage_url": "https://github.com/sineway/pass-eye",
 
     "icons": {
         "16": "icons/pass-eye-16.png",
@@ -25,9 +28,9 @@
     "browser_action": {},
 
     "commands": {
-        "_execute_browser_action": {
+        "view_password": {
             "suggested_key": {
-                "default": "Shift+Alt+P"
+                "default": "Alt+Shift+P"
             },
             "description": "__MSG_description__"
         }
