Add command description

--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
             "suggested_key": {
                 "default": "Alt+Shift+P"
             },
-            "description": "__MSG_description__"
+            "description": "__MSG_commandViewPassword__"
         }
     }
 }
